[gd_scene load_steps=4 format=3 uid="uid://cnqy8r5pdvf3j"]

[ext_resource type="Script" path="res://scenes/windows/generic_message_modal.gd" id="1_message"]
[ext_resource type="FontFile" uid="uid://fitttpkbkn2q" path="res://assets/fonts/honeyblot_caps.ttf" id="2_message"]

[sub_resource type="LabelSettings" id="LabelSettings_message"]
font = ExtResource("2_message")
font_size = 24
font_color = Color(0.050980393, 0.16862746, 0.27058825, 1)
shadow_size = 0

[node name="GenericMessageModal" type="CanvasLayer"]
script = ExtResource("1_message")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"DefaultPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Message Title"
label_settings = SubResource("LabelSettings_message")
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Message content goes here"
autowrap_mode = 3
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OK"
